[gd_scene load_steps=4 format=3 uid="uid://ct26f8wea4hup"]

[ext_resource type="Script" path="res://Scenes/Levels/Protaganism/ProtaganismInfo.gd" id="1_gon38"]

[sub_resource type="LabelSettings" id="LabelSettings_rtf74"]
font_size = 66

[sub_resource type="LabelSettings" id="LabelSettings_r400j"]
font_size = 101

[node name="Introduction" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gon38")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 5.0
offset_right = 567.0
offset_bottom = 96.0
text = "Protagonism"
label_settings = SubResource("LabelSettings_rtf74")
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 96.0
offset_right = 625.0
offset_bottom = 327.0
autowrap_mode = 2

[node name="ContinueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 334.0
offset_right = 423.0
offset_bottom = 357.0
text = "Click to continue"
horizontal_alignment = 1

[node name="BigText" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 98.0
offset_right = 945.0
offset_bottom = 325.0
text = "Big Decision"
label_settings = SubResource("LabelSettings_r400j")
